--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-DB_NAME=fdaef92i38b6twjo
-DB_USER=zxkbh3lsupdch12p
-DB_PW=n0aqbilbc7mplycn
-JAWSDB_URL=mysql://zxkbh3lsupdch12p:n0aqbilbc7mplycn@en1ehf30yom7txe7.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/fdaef92i38b6twjo
+DB_NAME=techblog_db
+DB_USER=root
+DB_PW=Salvation1!
